@startuml
'https://plantuml.com/sequence-diagram

class PlayerData{
    - userName:String
    - score:int
    - date:Date
    - {static}serialVersionUID:final long
    + getUsername():String
    + setUsername(String name)):void
    + getScore():int
    + setScore(int score):void
    + getDate():Date
    + setDate(Date date):void
    + toString():String
    + compareTo(PlayerData other):int
}
interface DAO{
    + {abstract}getAll():List<PlayerData>
    + {abstract}getByname():void
    + {abstract}add(List<PlayerData> data):void
    + {abstract}delete(String name):void
}

class Daoiml{
    - file:File
    + getFile:File
    + setFile(String filePath):void
    + getAll():List<PlayerData>
    + getByname():void
    + add(PlayerData data):void
    + delete(String name):void
}

Daoiml-->PlayerData
Daoiml..|>DAO
@enduml